# rust-simd-sort

./: .gitignore  .gitmodules  Cargo.toml  build.rs  readme.md
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: sort_benchmark.rs
benchmarks/: Cargo.toml  build.rs
benchmarks/benches/: sort_benchmark.rs
benchmarks/other_implementations/: cpp_avx512_qsort.cpp  cpp_vqsort.cpp
simd_sort/: Cargo.toml
simd_sort/src/: bit_64.rs  lib.rs
simd_sort/src/platform/: mod.rs
simd_sort/src/platform/nightly/: bit_64.rs
simd_sort/src/platform/wasm/: bit64.rs
simd_sort/src/platform/x86/: mod.rs
simd_sort/src/platform/x86/avx2/: bit_64.rs  f64_impl.rs  i64_impl.rs  mod.rs
simd_sort/src/platform/x86/avx512/: bit64.rs  bit_64.rs  f64_impl.rs  i64_impl.rs  mod.rs  u64_impl.rs
src/: bit_64.rs  lib.rs  utils.rs
src/platform/: mod.rs
src/platform/nightly/: bit_64.rs  common.rs  mod.rs
src/platform/wasm/: mod.rs
src/platform/x86/: avx2.rs  bit_64.rs  common.rs  mod.rs
src/platform/x86/avx2/: bit_64.rs  mod.rs
src/platform/x86/avx512/: bit64.rs  mod.rs
