[package]
name = "simd-sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[features]
default = ["nightly"]
nightly = []

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4.0"

[[bench]]
name = "sort_benchmark"
harness = false