[package]
name = "simd-sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[features]
default = ["nightly"]
nightly = []
rust_std_unstable = []
cpp_vqsort = []
cpp_vqsort_avx2 = []

[build-dependencies]
cc = { version = "1.0"}

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4.0"

[profile.bench]
lto = "thin"

[[bench]]
name = "sort_benchmark"
harness = false