[package]
name = "simd-sort-benchmarks"
version = "0.1.0"
edition = "2021"

[package.metadata]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simd-sort = {path="../simd_sort"}

[features]
default = []
nightly = ["simd-sort/nightly"]
rust_std_unstable = []
cpp_vqsort = []
cpp_vqsort_avx2 = []
cpp_avx512_qsort = []

[build-dependencies]
cc = { version = "1.0"}

[dev-dependencies]
rand = "0.8.5"
paste = "1.0.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
criterion = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
criterion = {version = "0.4.0", default_features=false}

[[bench]]
name = "sort_benchmark"
harness = false